# fastapi_study

./: Dockerfile  README.md  docker-compose.yaml
api/: db.py
test/api/: db.py  migrate_db.py
test/api/models/: task.py
test/api/routers/: posts.py  task.py
test/api/schemas/: task.py
test2/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
test2/api/: db.py  main.py  migrate_db.py  security.py
test2/api/cruds/: done.py  task.py  user.py
test2/api/models/: task.py
test2/api/routers/: done.py  task.py  token.py  user.py
test2/api/schemas/: user.py
